z-index bugfix

--- a/htdocs/styles.css
+++ b/htdocs/styles.css
@@ -111,7 +111,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
+  z-index: 100;
   text-align: center;
   padding: 20px;
   max-width: 90%; 
